@@ -2225,12 +2225,9 @@ literal|0
 decl_stmt|;
 try|try
 block|{
-name|fuzziness
-operator|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
+name|String
+name|fuzzyString
+init|=
 operator|new
 name|String
 argument_list|(
@@ -2240,8 +2237,35 @@ literal|0
 argument_list|,
 name|slopLength
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|""
+operator|.
+name|equals
+argument_list|(
+name|fuzzyString
+argument_list|)
+condition|)
+block|{
+comment|// Use automatic fuzziness, ~2
+name|fuzziness
+operator|=
+literal|2
+expr_stmt|;
+block|}
+else|else
+block|{
+name|fuzziness
+operator|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|fuzzyString
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
